crates/vox-integration-tests/tests/pipeline/includes/snapshots/pipeline_test__islands_meta_ts_interactive_search.snap
---
source: crates/vox-integration-tests/tests/pipeline/includes/include_02.rs
expression: meta.1
---
// Declared @island names (implementations live under islands/src/<Name>/).
export const VOX_ISLAND_NAMES = ["InteractiveChart", "SearchWidget"] as const;
export type VoxIslandName = (typeof VOX_ISLAND_NAMES)[number];
