crates/vox-integration-tests/tests/pipeline/includes/snapshots/pipeline_test__mixed_surface_islands_meta_ts.snap
---
source: crates/vox-integration-tests/tests/pipeline/includes/include_01.rs
expression: meta
---
// Declared @island names (implementations live under islands/src/<Name>/).
export const VOX_ISLAND_NAMES = ["Chart"] as const;
export type VoxIslandName = (typeof VOX_ISLAND_NAMES)[number];
