crates/vox-integration-tests/tests/pipeline/includes/snapshots/pipeline_test__mixed_surface_routes_manifest_ts.snap
---
source: crates/vox-integration-tests/tests/pipeline/includes/include_01.rs
assertion_line: 714
expression: m
---
// Generated by Vox — framework-agnostic route manifest.
// Source: WebIR RouteTree → TS (see valid gates: VOX_WEBIR_VALIDATE).
// Adapter: import { voxRoutes } from "./routes.manifest" in your App.tsx.

import type { ComponentType } from "react"
import { Dash } from "./Dash"

export type VoxRoute = {
  path: string
  component: ComponentType<any>
  loader?: (ctx: { params: Record<string, string> }) => Promise<unknown>
  pendingComponent?: ComponentType
  errorComponent?: ComponentType<{ error: Error }>
  children?: VoxRoute[]
  index?: boolean
}

export const voxRoutes: VoxRoute[] = [
{
  path: "/",
  component: Dash,
  index: true,
},
]

// Phase C part 2: typed route URL surface.
// Use `routePath["/users/:id"](userId)` instead of hand-formatting URLs.
export type KnownRoute =
  | "/";

export const routePath = {
  "/": (): string => "/",
} as const;
