crates/vox-integration-tests/tests/pipeline/includes/snapshots/pipeline_test__mixed_surface_shell_tsx.snap
---
source: crates/vox-integration-tests/tests/pipeline/includes/include_01.rs
expression: shell
---
import React, { useState } from "react";

export function Shell(): React.ReactElement {
    const [x, _set_x] = useState(0);
  return (
    <span>
      {(() => {
        x;
      })()}
    </span>
  );
}
