crates/vox-integration-tests/tests/pipeline/includes/snapshots/pipeline_test__multi_route_rust_main_rs_emit.snap
---
source: crates/vox-integration-tests/tests/pipeline/includes/include_03.rs
expression: main_rs
---
// vox-generated rust_app_shell=AxumLocalServer
// Generated by Vox Compiler
use axum::{Router, routing::{get, post}, Json};
use axum::extract::Extension;
use axum::extract::Query;
use axum::response::{Response, IntoResponse};
use axum::body::Body;
use axum::http::{StatusCode, header};
use axum::middleware;
use axum::extract::ConnectInfo;
use tower_http::trace::TraceLayer;
use tower_http::request_id::{MakeRequestUuid, PropagateRequestIdLayer, SetRequestIdLayer};
use std::net::SocketAddr;
use rust_embed::Embed;
use multi_route_app::*;

#[derive(Embed)]
#[folder = "public/"]
struct Assets;

async fn serve_embedded(uri: axum::http::Uri) -> Response {
    let path = uri.path().trim_start_matches('/');
    let path = if path.is_empty() { "index.html" } else { path };
    match Assets::get(path) {
        Some(file) => {
            let mime = mime_guess::from_path(path).first_or_octet_stream();
            (StatusCode::OK, [(header::CONTENT_TYPE, mime.as_ref().to_string())], file.data.to_vec()).into_response()
        }
        None => {
            // SPA fallback: serve index.html for client-side routing
            match Assets::get("index.html") {
                Some(file) => (StatusCode::OK, [(header::CONTENT_TYPE, "text/html".to_string())], file.data.to_vec()).into_response(),
                None => (StatusCode::NOT_FOUND, "Not Found").into_response(),
            }
        }
    }
}

async fn serve_dispatch(req: axum::http::Request<Body>) -> Response {
    let uri = req.uri().clone();
    if *req.method() == axum::http::Method::GET {
        if let Ok(base) = std::env::var("VOX_SSR_DEV_URL") {
            let base = base.trim();
            if !base.is_empty() {
                let p = uri.path();
                if !p.starts_with("/api") {
                    let target = format!("{}{}", base.trim_end_matches('/'), uri);
                    if let Ok(client) = vox_http_client::client_builder()
                        .timeout(std::time::Duration::from_secs(60))
                        .build()
                    {
                        if let Ok(resp) = client.get(target).send().await {
                            let status = resp.status();
                            let ct = resp.headers().get(reqwest::header::CONTENT_TYPE).cloned();
                            let bytes = resp.bytes().await.unwrap_or_default();
                            let code = axum::http::StatusCode::from_u16(status.as_u16())
                                .unwrap_or(axum::http::StatusCode::BAD_GATEWAY);
                            let mut builder = Response::builder().status(code);
                            if let Some(ct) = ct {
                                if let Ok(v) = ct.to_str() {
                                    builder = builder.header(header::CONTENT_TYPE, v);
                                }
                            }
                            if let Ok(out) = builder.body(Body::from(bytes)) {
                                return out;
                            }
                        }
                    }
                }
            }
        }
    }
    serve_embedded(uri).await
}

async fn vox_copy_request_id(mut req: axum::http::Request<Body>, next: middleware::Next) -> Response {
    let rid = req.extensions().get::<tower_http::request_id::RequestId>().and_then(|id| id.header_value().to_str().ok().map(|s| s.to_string()));
    req.extensions_mut().insert(rid);
    next.run(req).await
}

#[tokio::main]
async fn main() {
    tracing_subscriber::fmt::init();
    // 1. Initialize the durable database.
    //    Uses `DbConfig::resolve_canonical()` so the binary picks up
    //    `VOX_DB_URL`/`VOX_DB_PATH` env vars (matches `emit_db_setup`).
    let vox_durable_db = std::sync::Arc::new(::vox_db::VoxDb::connect(
        ::vox_db::DbConfig::resolve_canonical()
            .expect("vox durable boot: resolve VoxDb config (VOX_DB_URL+TOKEN, or VOX_DB_PATH)"),
    ).await.expect("vox durable boot: VoxDb::connect"));

    // 2. Register the process-global HirModule for workflow body lookup.
    //    The HirModule is serialized to JSON at codegen time and embedded
    //    as a `const &str` (see `load_hir_module_from_embedded` below).
    ::vox_workflow_runtime::workflow::set_current_hir_module(
        load_hir_module_from_embedded()
    );

    // 3. No `@scheduled` functions in this module — scheduler not started.

    let mut app = Router::new()
        .route("/api/get_stats", post(handle_sf_get_stats))
        .route("/api/query/api_todos", get(handle_q_api_todos))
        .route("/api/mutation/create_todo", post(handle_m_create_todo))
        .fallback(serve_dispatch);

    app = app.layer(middleware::from_fn(vox_copy_request_id));
    app = app.layer(PropagateRequestIdLayer::x_request_id());
    app = app.layer(SetRequestIdLayer::x_request_id(MakeRequestUuid));
    app = app.layer(TraceLayer::new_for_http());

    let port: u16 = std::env::var("VOX_PORT")
        .ok()
        .and_then(|s| s.parse().ok())
        .unwrap_or(3000);
    let addr = SocketAddr::from(([127, 0, 0, 1], port));
    println!("Listening on {}", addr);
    let listener = match tokio::net::TcpListener::bind(addr).await {
        Ok(listener) => listener,
        Err(e) => { eprintln!("Failed to bind TCP listener: {}", e); std::process::exit(2); }
    };
    if let Err(e) = axum::serve(listener, app.into_make_service_with_connect_info::<SocketAddr>()).await {
        eprintln!("Server exited with error: {}", e);
        std::process::exit(2);
    }
    vox_actor_runtime::builtins::vox_flush_exit_commands();
}

async fn handle_q_api_todos(Extension(vox_rid): Extension<Option<String>>, Query(q): Query<std::collections::BTreeMap<String, String>>) -> Result<Json<serde_json::Value>, (StatusCode, Json<serde_json::Value>)> {
    return Ok(Json(serde_json::to_value("[]".to_string()).map_err(|e| (
    StatusCode::INTERNAL_SERVER_ERROR,
    Json(vox_http_client::envelope::error_json("SERIALIZATION_ERROR", format!("{}", e), vox_rid.clone(), None)),
))?));
}

async fn handle_m_create_todo(Extension(vox_rid): Extension<Option<String>>, Json(request): Json<serde_json::Value>) -> Result<Json<serde_json::Value>, (StatusCode, Json<serde_json::Value>)> {
    return Ok(Json(serde_json::to_value("created".to_string()).map_err(|e| (
    StatusCode::INTERNAL_SERVER_ERROR,
    Json(vox_http_client::envelope::error_json("SERIALIZATION_ERROR", format!("{}", e), vox_rid.clone(), None)),
))?));
}

async fn handle_sf_get_stats(Extension(vox_rid): Extension<Option<String>>, Json(request): Json<serde_json::Value>) -> Result<Json<serde_json::Value>, (StatusCode, Json<serde_json::Value>)> {
    return Ok(Json(serde_json::to_value(42i64).map_err(|e| (
    StatusCode::INTERNAL_SERVER_ERROR,
    Json(vox_http_client::envelope::error_json("SERIALIZATION_ERROR", format!("{}", e), vox_rid.clone(), None)),
))?));
}

/// Decode the codegen-time-embedded HirModule JSON back into a runtime
/// `HirModule`. Called once from `main()` to register the process-global
/// module for `current_hir_module()` lookups (ADR-041 §6(b)).
fn load_hir_module_from_embedded() -> ::vox_compiler::hir::HirModule {
    const EMBEDDED_HIR: &str = r#"{"imports":[{"module_path":["react"],"item":"use_state","span":{"start":7,"end":23}}],"rust_imports":[],"functions":[],"types":[{"id":0,"name":"Todo","variants":[{"name":"Active","fields":[["text",{"Named":"str"}]],"span":{"start":42,"end":60}},{"name":"Completed","fields":[["text",{"Named":"str"}]],"span":{"start":66,"end":87}}],"fields":[],"is_pub":false,"span":{"start":24,"end":97}}],"tests":[],"examples":[],"foralls":[],"endpoint_fns":[{"kind":"Query","id":12,"name":"api_todos","params":[],"return_type":{"Named":"str"},"body":[{"Return":{"value":{"StringLit":["[]",{"start":1014,"end":1018}]},"span":{"start":1007,"end":1019}}}],"route_path":"/api/query/api_todos","is_pure":false,"webhook":null,"cors":null,"rate_limit":null,"pii":null,"layer":null,"auth":null,"span":{"start":982,"end":1021}},{"kind":"Mutation","id":13,"name":"create_todo","params":[],"return_type":{"Named":"str"},"body":[{"Return":{"value":{"StringLit":["created",{"start":1065,"end":1074}]},"span":{"start":1058,"end":1075}}}],"route_path":"/api/mutation/create_todo","is_pure":false,"webhook":null,"cors":null,"rate_limit":null,"pii":null,"layer":null,"auth":null,"span":{"start":1031,"end":1077}},{"kind":"Server","id":14,"name":"get_stats","params":[],"return_type":{"Named":"int"},"body":[{"Return":{"value":{"IntLit":[42,{"start":1117,"end":1119}]},"span":{"start":1110,"end":1120}}}],"route_path":"/api/get_stats","is_pure":false,"webhook":null,"cors":null,"rate_limit":null,"pii":null,"layer":null,"auth":null,"span":{"start":1085,"end":1122}}],"tables":[],"indexes":[],"collections":[],"vector_indexes":[],"search_indexes":[],"mcp_tools":[],"mcp_resources":[],"agents":[],"environments":[],"components":[{"id":1,"name":"Dashboard","params":[],"members":[{"Stmt":{"Let":{"pattern":{"Tuple":[[{"Ident":["visits",{"start":121,"end":128}]},{"Ident":["set_visits",{"start":129,"end":140}]}],{"start":120,"end":142}]},"type_ann":null,"value":{"Call":[{"Ident":["use_state",{"start":143,"end":152}]},[{"name":null,"value":{"IntLit":[0,{"start":153,"end":154}]}}],false,{"start":143,"end":156}]},"mutable":false,"span":{"start":116,"end":156}}}}],"view":{"Jsx":{"tag":"column","attributes":[{"name":"raw_class","value":{"StringLit":["dashboard",{"start":183,"end":194}]}}],"children":[{"Jsx":{"tag":"column","attributes":[{"name":"raw_class","value":{"StringLit":["dashboard-title",{"start":223,"end":240}]}}],"children":[{"StringLit":["Dashboard",{"start":244,"end":255}]}],"span":{"start":206,"end":258}}},{"Jsx":{"tag":"link","attributes":[{"name":"href","value":{"StringLit":["/todos",{"start":276,"end":284}]}}],"children":[{"StringLit":["Todos",{"start":288,"end":295}]}],"span":{"start":266,"end":298}}},{"Jsx":{"tag":"link","attributes":[{"name":"href","value":{"StringLit":["/about",{"start":316,"end":324}]}}],"children":[{"StringLit":["About",{"start":328,"end":335}]}],"span":{"start":306,"end":338}}},{"Jsx":{"tag":"button","attributes":[{"name":"raw_class","value":{"StringLit":["track-btn",{"start":363,"end":374}]}},{"name":"on_click","value":{"Block":[[{"Expr":{"expr":{"Lambda":[[{"id":4,"name":"_e","type_ann":null,"default":null,"span":{"start":389,"end":392}}],null,{"Call":[{"Ident":["set_visits",{"start":393,"end":403}]},[{"name":null,"value":{"Binary":["Add",{"Ident":["visits",{"start":404,"end":410}]},{"IntLit":[1,{"start":413,"end":414}]},{"start":404,"end":414}]}}],false,{"start":393,"end":416}]},false,{"start":386,"end":416}]},"span":{"start":386,"end":416}}}],{"start":385,"end":417}]}}],"children":[{"StringLit":["Track",{"start":420,"end":427}]}],"span":{"start":346,"end":430}}}],"span":{"start":166,"end":436}}},"styles":[],"layer":null,"span":{"start":88,"end":438}},{"id":5,"name":"TodoList","params":[],"members":[{"Stmt":{"Let":{"pattern":{"Tuple":[[{"Ident":["items",{"start":471,"end":477}]},{"Ident":["set_items",{"start":478,"end":488}]}],{"start":470,"end":490}]},"type_ann":null,"value":{"Call":[{"Ident":["use_state",{"start":491,"end":500}]},[{"name":null,"value":{"ListLit":[[],{"start":501,"end":504}]}}],false,{"start":491,"end":505}]},"mutable":false,"span":{"start":466,"end":505}}}},{"Stmt":{"Let":{"pattern":{"Tuple":[[{"Ident":["draft",{"start":514,"end":520}]},{"Ident":["set_draft",{"start":521,"end":531}]}],{"start":513,"end":533}]},"type_ann":null,"value":{"Call":[{"Ident":["use_state",{"start":534,"end":543}]},[{"name":null,"value":{"StringLit":["",{"start":544,"end":546}]}}],false,{"start":534,"end":548}]},"mutable":false,"span":{"start":509,"end":548}}}}],"view":{"Jsx":{"tag":"column","attributes":[{"name":"raw_class","value":{"StringLit":["todo_list",{"start":575,"end":586}]}}],"children":[{"JsxSelfClosing":{"tag":"input","attributes":[{"name":"bind","value":{"Ident":["draft",{"start":609,"end":614}]}},{"name":"raw_class","value":{"StringLit":["draft-input",{"start":626,"end":639}]}},{"name":"aria_label","value":{"StringLit":["New task",{"start":652,"end":662}]}}],"span":{"start":598,"end":664}}},{"Jsx":{"tag":"button","attributes":[{"name":"raw_class","value":{"StringLit":["add-btn",{"start":689,"end":698}]}},{"name":"on_click","value":{"Block":[[{"Expr":{"expr":{"Lambda":[[{"id":10,"name":"_e","type_ann":null,"default":null,"span":{"start":713,"end":716}}],null,{"Call":[{"Ident":["set_items",{"start":717,"end":726}]},[{"name":null,"value":{"MethodCall":[{"Ident":["items",{"start":727,"end":732}]},"append",[{"name":null,"value":{"ObjectLit":[[["text",{"Ident":["draft",{"start":747,"end":752}]}]],{"start":740,"end":754}]}}],null,{"start":727,"end":755}]}}],false,{"start":717,"end":756}]},false,{"start":710,"end":756}]},"span":{"start":710,"end":756}}}],{"start":709,"end":757}]}}],"children":[{"StringLit":["Add",{"start":760,"end":765}]}],"span":{"start":672,"end":768}}}],"span":{"start":558,"end":774}}},"styles":[],"layer":null,"span":{"start":439,"end":776}},{"id":11,"name":"About","params":[],"members":[],"view":{"Jsx":{"tag":"column","attributes":[{"name":"raw_class","value":{"StringLit":["about",{"start":824,"end":831}]}}],"children":[{"Jsx":{"tag":"column","attributes":[{"name":"raw_class","value":{"StringLit":["about-title",{"start":860,"end":873}]}}],"children":[{"StringLit":["About",{"start":877,"end":884}]}],"span":{"start":843,"end":887}}}],"span":{"start":807,"end":893}}},"styles":[],"layer":null,"span":{"start":777,"end":895}}],"client_routes":[{"entries":[{"path":"/","component_name":"Dashboard","children":[],"redirect":null,"is_wildcard":false,"loader_name":null,"pending_component_name":null,"error_component_name":null,"span":{"start":909,"end":926}},{"path":"/todos","component_name":"TodoList","children":[],"redirect":null,"is_wildcard":false,"loader_name":null,"pending_component_name":null,"error_component_name":null,"span":{"start":930,"end":951}},{"path":"/about","component_name":"About","children":[],"redirect":null,"is_wildcard":false,"loader_name":null,"pending_component_name":null,"error_component_name":null,"span":{"start":955,"end":973}}],"not_found_component":null,"error_component":null,"span":{"start":896,"end":975}}],"url_decls":[],"state_machines":[],"fragments":[],"reactive_modules":[],"forms":[],"back_button":null,"deep_link":null,"push":null,"token_decls":[],"route_ids":[{"name":"Dashboard","url_pattern":"/","params":[],"analytics_slug":"dashboard","span":{"start":909,"end":926}},{"name":"TodoList","url_pattern":"/todos","params":[],"analytics_slug":"todo_list","span":{"start":930,"end":951}},{"name":"About","url_pattern":"/about","params":[],"analytics_slug":"about","span":{"start":955,"end":973}}],"inferred_types":{},"consts":[],"configs":[],"themes":[],"messages":[],"skills":[],"agent_defs":[],"legacy_ast_nodes":[],"lower_warnings":[]}"#;
    ::serde_json::from_str(EMBEDDED_HIR)
        .expect("embedded HirModule deserializes (codegen wrote it; should round-trip)")
}
