crates/vox-integration-tests/tests/pipeline/includes/snapshots/pipeline_test__parity_page_tsx_island_mount_op_s047.snap
---
source: crates/vox-integration-tests/tests/pipeline/includes/include_03.rs
expression: ts
---
import React, { useState } from "react";

export function ParityPage(): React.ReactElement {
  const [s, set_s] = useState("x");
  return (
    <div className={"parity-wrap"}>
      <div data-vox-island="ParityP" data-prop-label={(() => {
        s;
      })()} />
    </div>
  );
}
