crates/vox-integration-tests/tests/pipeline/includes/snapshots/pipeline_test__routes_home_about_manifest_ts.snap
---
source: crates/vox-integration-tests/tests/pipeline/includes/include_01.rs
expression: m.1
---
// Generated by Vox — framework-agnostic route manifest.
// Source: WebIR RouteTree → TS (see valid gates: VOX_WEBIR_VALIDATE).
// Adapter: import { voxRoutes } from "./routes.manifest" in your App.tsx.

import type { ComponentType } from "react"
import { about } from "./about.tsx"
import { home } from "./home.tsx"

export type VoxRoute = {
  path: string
  component: ComponentType<any>
  loader?: (ctx: { params: Record<string, string> }) => Promise<unknown>
  pendingComponent?: ComponentType
  errorComponent?: ComponentType<{ error: Error }>
  children?: VoxRoute[]
  index?: boolean
}

export const voxRoutes: VoxRoute[] = [
{
  path: "/",
  component: home,
  index: true,
},
{
  path: "/about",
  component: about,
},
]
