crates/vox-integration-tests/tests/pipeline/includes/snapshots/pipeline_test__routes_with_loading_spinner_manifest_ts.snap
---
source: crates/vox-integration-tests/tests/pipeline/includes/include_01.rs
assertion_line: 359
expression: m.1
---
// Generated by Vox — framework-agnostic route manifest.
// Source: WebIR RouteTree → TS (see valid gates: VOX_WEBIR_VALIDATE).
// Adapter: import { voxRoutes } from "./routes.manifest" in your App.tsx.

import type { ComponentType } from "react"
import { home } from "./home"

export type VoxRoute = {
  path: string
  component: ComponentType<any>
  loader?: (ctx: { params: Record<string, string> }) => Promise<unknown>
  pendingComponent?: ComponentType
  errorComponent?: ComponentType<{ error: Error }>
  children?: VoxRoute[]
  index?: boolean
}

export const voxRoutes: VoxRoute[] = [
{
  path: "/",
  component: home,
  index: true,
},
]

// Phase C part 2: typed route URL surface.
// Use `routePath["/users/:id"](userId)` instead of hand-formatting URLs.
export type KnownRoute =
  | "/";

export const routePath = {
  "/": (): string => "/",
} as const;
