crates/vox-integration-tests/tests/pipeline/includes/snapshots/pipeline_test__shape_types_ts_tagged_union.snap
---
source: crates/vox-integration-tests/tests/pipeline/includes/include_03.rs
expression: types.1
---
export type Shape =
  | { readonly _tag: "Circle"; readonly radius: number }
  | { readonly _tag: "Rectangle"; readonly width: number; readonly height: number }
  | { readonly _tag: "Triangle"; readonly base: number; readonly height: number };

export const Circle = (radius: number): Shape => ({ _tag: "Circle", radius });
export const Rectangle = (width: number, height: number): Shape => ({ _tag: "Rectangle", width, height });
export const Triangle = (base: number, height: number): Shape => ({ _tag: "Triangle", base, height });
